# nautilus-avinfo

./: .gitignore  LICENSE  README.md  meson.build
.github/actions/fedora-build-docker/: Dockerfile  action.yml  entrypoint.sh
.github/docker/arch-build/: Dockerfile  entrypoint.sh
.github/docker/fedora-build/: Dockerfile  entrypoint.sh
.github/docker/generic-build/: Dockerfile  entrypoint.sh
.github/workflows/: build.yml  deploy.yml
buhh/en/LC_MESSAGES/: nautilus-avinfo.mo
docs/: .gitignore  package.json
docs/docs/: develop.md  index.md  install.md
docs/docs/.vitepress/: config.mts
docs/docs/guide/: installation.md  usage.md
docs/docs/reference/: debugging.md  getting-started.md  release.md  rpm-packaging-notes.md
pages/: package.json
pages/docs/: index.md
pkg/aur/: PKGBUILD  PKGBUILD.jinja  PKGBUILD.local
pkg/rpm/: nautilus-avinfo.fc.spec  nautilus-avinfo.local.spec  nautilus-avinfo.opensuse.spec  nautilus-avinfo.spec  nautilus-avinfo.spec.jinja  nautilus-avinfo.spec.template
po/: POTFILES.in  en.po  meson.build  nautilus-avinfo.pot
scripts/: generate-pkgbuild.py  generate-rpm-spec.py  generate-rpm-spec.sh  install.sh  uninstall.sh
src/: avinfo-main.c  avinfo-object.c  avinfo-object.h  column-provider.c  column-provider.h  format.c  format.h  info-provider.c  info-provider.h  info-update.c  info-update.h  menu-provider.c  menu-provider.h  meson.build  properties-provider.c  properties-provider.h
unix/fedora/: nautilus-avinfo.spec  nautilus-avinfo.spec.template
